--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "italy = top_travel_[-3] # 'Italy'\n",
+    "italy = top_travel_countries[-3] # 'Italy'\n",
     "italy"
    ]
   },
