--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "italy = top_travel_countries[-3] # 'Italy'\n",
+    "italy = countries[-3] # 'Italy'\n",
     "italy"
    ]
   },
