Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -184,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Mexico']"
+       "['Mexico', 'USA']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mexico = countries[3:4]\n",
+    "mexico = countries[3:5]\n",
     "mexico"
    ]
   },
