Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,8 @@
     }
    ],
    "source": [
-    "countries[1]='Malta'\n",
+    "countries[13]=13\n",
+    "'Malta'\n",
     "countries"
    ]
   },
