--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"\")"
+    "countries.append('Thailan')"
    ]
   },
   {
