Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Thailan')"
+    "countries.append('Thailand')\n",
+    "co"
    ]
   },
   {
