--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set()"
+    "unique_countries = set(countries)"
    ]
   },
   {
